--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server",
-    "scss": "node-sass -o css/ css/"
+    "lite": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -24,15 +23,10 @@
   },
   "devDependencies": {
     "bootstrap": "^4.5.0",
-    "browser-sync": "^2.23.6",
     "font-awesome": "^4.7.0",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
     "jquery": "^3.5.1",
     "jquery.js": "0.0.2-security",
     "lite-server": "^2.5.4",
-    "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
-    "sass": "^1.26.8"
+    "popper.js": "^1.16.1"
   }
 }
